--- a/.gitignore
+++ b/.gitignore
@@ -9,5 +9,5 @@ grunt/images/*
 npm-debug.log
 webpack/node_modules/*
 socket.io/server/node_modules/*
-sass/.sass-cache/*
-sass/*/*.map
+.sass-cache/
+*.css.map
