gitDeploy前端部署工程完成

--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,7 @@ gulp/images/*
 grunt/node_modules/*
 grunt/dist/*
 grunt/images/*
+gitDeploy/rev/*
 npm-debug.log
 webpack/node_modules/*
 socket.io/server/node_modules/*
