--- a/gulp/package.json
+++ b/gulp/package.json
@@ -15,8 +15,13 @@
     "gulp-htmlmin": "^1.1.4",
     "gulp-imagemin": "^2.3.0",
     "gulp-minify-css": "^1.2.1",
+    "gulp-minify-html": "^1.0.6",
     "gulp-rename": "^1.2.2",
-    "gulp-uglify": "^1.4.1"
+    "gulp-rev": "^7.1.2",
+    "gulp-rev-collector": "^1.0.5",
+    "gulp-sass": "^2.3.2",
+    "gulp-uglify": "^1.4.1",
+    "vinyl-paths": "^2.1.0"
   },
   "scripts": {
     "test": "gulp"
