--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "devDependencies": {
     "copy": "^0.1.2",
     "del": "^2.0.2",
+    "get-gulp-args": "0.0.1",
     "gulp": "^3.9.0",
     "gulp-concat": "^2.6.0",
     "gulp-css-spriter": "^0.3.3",
@@ -14,6 +15,7 @@
     "gulp-html-replace": "^1.5.1",
     "gulp-htmlmin": "^1.1.4",
     "gulp-imagemin": "^2.3.0",
+    "gulp-load-plugins": "^1.4.0",
     "gulp-minify-css": "^1.2.1",
     "gulp-minify-html": "^1.0.6",
     "gulp-rename": "^1.2.2",
@@ -21,6 +23,10 @@
     "gulp-rev-collector": "^1.0.5",
     "gulp-sass": "^2.3.2",
     "gulp-uglify": "^1.4.1",
+    "gulp.spritesmith": "^6.2.1",
+    "merge-stream": "^1.0.0",
+    "run-sequence": "^1.2.2",
+    "vinyl-buffer": "^1.0.0",
     "vinyl-paths": "^2.1.0"
   },
   "scripts": {
