--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
     "gulp": "^3.9.0",
     "gulp-concat": "^2.6.0",
     "gulp-css-spriter": "^0.3.3",
+    "gulp-cssmin": "^0.1.7",
     "gulp-cssnano": "^2.1.1",
     "gulp-html-replace": "^1.5.1",
     "gulp-htmlmin": "^1.1.4",
+    "gulp-if": "^2.0.2",
     "gulp-imagemin": "^2.3.0",
     "gulp-load-plugins": "^1.4.0",
     "gulp-minify-css": "^1.2.1",
