--- a/package.json
+++ b/package.json
@@ -27,9 +27,13 @@
     "gulp-uglify": "^1.4.1",
     "gulp.spritesmith": "^6.2.1",
     "merge-stream": "^1.0.0",
+    "postcss-loader": "^1.1.1",
+    "postcss-sprites": "^4.1.0",
     "run-sequence": "^1.2.2",
     "vinyl-buffer": "^1.0.0",
-    "vinyl-paths": "^2.1.0"
+    "vinyl-paths": "^2.1.0",
+    "webpack": "^1.13.3",
+    "webpack-spritesmith": "^0.3.0"
   },
   "scripts": {
     "test": "gulp"
