--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "dependencies": {},
   "devDependencies": {
     "copy": "^0.1.2",
+    "css-loader": "^0.26.0",
     "del": "^2.0.2",
+    "file-loader": "^0.9.0",
     "get-gulp-args": "0.0.1",
     "gulp": "^3.9.0",
     "gulp-concat": "^2.6.0",
@@ -27,9 +29,13 @@
     "gulp-uglify": "^1.4.1",
     "gulp.spritesmith": "^6.2.1",
     "merge-stream": "^1.0.0",
+    "node-sass": "^3.13.0",
     "postcss-loader": "^1.1.1",
     "postcss-sprites": "^4.1.0",
     "run-sequence": "^1.2.2",
+    "sass-loader": "^4.0.2",
+    "style-loader": "^0.13.1",
+    "url-loader": "^0.5.7",
     "vinyl-buffer": "^1.0.0",
     "vinyl-paths": "^2.1.0",
     "webpack": "^1.13.3",
