--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "file-loader": "^0.9.0",
     "get-gulp-args": "0.0.1",
     "gulp": "^3.9.0",
+    "gulp-base64": "^0.1.3",
     "gulp-concat": "^2.6.0",
     "gulp-css-spriter": "^0.3.3",
     "gulp-cssmin": "^0.1.7",
