feat: update redux demo

--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,8 @@ gitDeploy/rev/*
 gitDeploy/dist/*
 npm-debug.log
 grunt/node_modules/*
+react/dva/node_modules/*
+react/redux/node_modules/*
 webpack/node_modules/*
 socket.io/server/node_modules/*
 .sass-cache/
