--- a/react/dva/package.json
+++ b/react/dva/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "build_1": "browserify --debug --extension=js -o demo_1/bundle.js demo_1/index.js",
-    "build_2": "browserify --debug --extension=js -o demo_2/bundle.js demo_1/index.js",
+    "build_2": "browserify --debug --extension=js -o demo_2/bundle.js demo_2/index.js",
+    "build_3": "browserify --debug --extension=js -o demo_3/bundle.js demo_3/index.js",
     "start": "http-server -p 8000"
   },
   "author": "wteam-xq",
@@ -28,7 +29,8 @@
     "react": "^15.0.2",
     "react-dom": "^15.0.2",
     "react-redux": "^4.4.5",
-    "redux": "^3.5.2"
+    "redux": "^3.5.2",
+    "redux-saga": "^1.0.1"
   },
   "devDependencies": {
     "babel-preset-es2015": "^6.6.0",
