--- a/react/dva/package.json
+++ b/react/dva/package.json
@@ -33,6 +33,7 @@
     "redux-saga": "^1.0.1"
   },
   "devDependencies": {
+    "babel-plugin-transform-runtime": "^6.23.0",
     "babel-preset-es2015": "^6.6.0",
     "babel-preset-react": "^6.5.0",
     "babelify": "^7.3.0",
