fix: fixed dva_demo3 bug

--- a/react/dva/package.json
+++ b/react/dva/package.json
@@ -19,6 +19,9 @@
           "presets": [
             "es2015",
             "react"
+          ],
+          "plugins": [
+            "transform-runtime"
           ]
         }
       ]
