--- a/react/dva/package.json
+++ b/react/dva/package.json
@@ -42,6 +42,8 @@
     "babel-preset-react": "^6.5.0",
     "babelify": "^7.3.0",
     "browserify": "^13.0.1",
-    "http-server": "^0.9.0"
+    "http-server": "^0.9.0",
+    "webpack": "^4.25.1",
+    "webpack-cli": "^3.1.2"
   }
 }
