--- a/react/dva/package.json
+++ b/react/dva/package.json
@@ -7,6 +7,8 @@
     "build_1": "browserify --debug --extension=js -o demo_1/bundle.js demo_1/index.js",
     "build_2": "browserify --debug --extension=js -o demo_2/bundle.js demo_2/index.js",
     "build_3": "browserify --debug --extension=js -o demo_3/bundle.js demo_3/index.js",
+    "dev_info": "webpack --watch --mode development",
+    "build_info": "webpack --mode production",
     "start": "http-server -p 8000"
   },
   "author": "wteam-xq",
@@ -37,12 +39,23 @@
     "redux-saga": "^1.0.1"
   },
   "devDependencies": {
+    "@babel/polyfill": "^7.2.5",
+    "babel-core": "^6.26.3",
+    "babel-loader": "^7.1.4",
+    "babel-plugin-import": "^1.11.0",
     "babel-plugin-transform-runtime": "^6.23.0",
-    "babel-preset-es2015": "^6.6.0",
-    "babel-preset-react": "^6.5.0",
+    "babel-preset-env": "^1.7.0",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-react": "^6.24.1",
+    "babel-preset-stage-0": "^6.24.1",
     "babelify": "^7.3.0",
     "browserify": "^13.0.1",
+    "css-loader": "^1.0.1",
+    "file-loader": "^1.1.11",
     "http-server": "^0.9.0",
+    "sass-loader": "^7.1.0",
+    "style-loader": "^0.23.1",
+    "url-loader": "^1.1.2",
     "webpack": "^4.25.1",
     "webpack-cli": "^3.1.2"
   }
