--- a/react/dva/package.json
+++ b/react/dva/package.json
@@ -54,7 +54,9 @@
     "css-loader": "^1.0.1",
     "file-loader": "^1.1.11",
     "http-server": "^0.9.0",
-    "sass-loader": "^7.1.0",
+    "less": "^3.9.0",
+    "less-loader": "^4.1.0",
+    "postcss-loader": "^3.0.0",
     "style-loader": "^0.23.1",
     "url-loader": "^1.1.2",
     "webpack": "^4.25.1",
