--- a/react/dva/package.json
+++ b/react/dva/package.json
@@ -60,6 +60,7 @@
     "style-loader": "^0.23.1",
     "url-loader": "^1.1.2",
     "webpack": "^4.25.1",
-    "webpack-cli": "^3.1.2"
+    "webpack-cli": "^3.1.2",
+    "rc-notification": "~3.3.0"
   }
 }
